# Vercel-Web-Analytics-Report-Sender

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  main.py  pyproject.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  setupReference.md  systemPatterns.md  techContext.md
memory-bank/journal/: 2025_11_01_core_implementation_complete.md  2025_11_01_migration_to_uv_and_gemini.md  2025_11_01_project_initialization.md  2025_11_06_migration_to_google_analytics.md
src/: __init__.py  config.py  scheduler.py
src/ai/: __init__.py  prompts.py  summarizer.py
src/email/: __init__.py  sender.py  templates.py
src/google_analytics/: __init__.py  client.py  models.py
src/processing/: __init__.py  analyzer.py
src/utils/: __init__.py  logger.py  retry.py
src/vercel/: __init__.py  client.py  models.py
tests/: __init__.py  test_analyzer.py  test_config.py  test_google_analytics_client.py  test_vercel_client.py
